--- a/k8s/janusgraph/janusgraph-server.yaml
+++ b/k8s/janusgraph/janusgraph-server.yaml
@@ -21,7 +21,7 @@ spec:
           env:
             - name: JANUS_PROPS_TEMPLATE
               value: cql-es
-              # TODO: Update hostname to point to JanusGraph IP
+              # TODO: Update hostname to point to Scylla IP
             - name: janusgraph.storage.hostname
               value: 10.138.0.3
             - name: janusgraph.storage.cql.keyspace
